objects/Approval_Matrix__c.object
<CustomObject>
    <description>Object to store the Approval Routing rules</description>
    <fields>
        <fullName>Account_Region__c</fullName>
        <label>Account Region</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Flow_Type__c</fullName>
        <label>Approval Flow Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unanimous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sequential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Matrix_Name__c</fullName>
        <externalId>true</externalId>
        <label>Approval Matrix Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Level_10__c</fullName>
        <label>Approver Level 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Level_11__c</fullName>
        <label>Approver Level 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Level_12__c</fullName>
        <label>Approver Level 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Level_Type_10__c</fullName>
        <label>Approver Level Type 10</label>
        <picklist>
            <picklistValues>
                <fullName>Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Function</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Level_Type_11__c</fullName>
        <label>Approver Level Type 11</label>
        <picklist>
            <picklistValues>
                <fullName>Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Function</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Level_Type_12__c</fullName>
        <label>Approver Level Type 12</label>
        <picklist>
            <picklistValues>
                <fullName>Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Function</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_BG__c</fullName>
        <label>Owner BG</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User_Key__c</fullName>
        <label>User Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owner_BG__c</columns>
        <columns>Account_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TS_Routes</fullName>
        <columns>NAME</columns>
        <columns>Owner_BG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>9/10/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>Owner_BG__c</field>
            <operation>includes</operation>
            <value>TS</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>TS Routes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AM-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>